Refactor context classes
* make JSON context serialization default